--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,14 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: postgres
+  password: password
+  host: db
+  port: 5432
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
 
 development:
   <<: *default
