upload bug fix, endpoint to display all pics of user, changed EOL to LF

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "3002:3000"
     depends_on:
       - db
+    stdin_open: true
+    tty: true
 
   db:
     image: postgres:14.1-bullseye
